--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ ul li a:hover{
 }
 #row2::before{
     content: '';
-    background: url('2.jpeg') no-repeat center center/cover;
+    background: url('/Newfolder/4.jpg') no-repeat center center/cover;
     position: absolute;
     top: 0px;
     left:0px;
@@ -484,7 +484,7 @@ ul li a:hover{
     width: 29vw;
     height: 360px;
     border: 2px solid black;
-    background:url('a1.jpeg') no-repeat center center/cover; 
+    background:url('/Newfolder/5.jpg') no-repeat center center/cover; 
     display: flex;
     justify-content:center;
     align-items:flex-end;
@@ -494,7 +494,7 @@ ul li a:hover{
     width: 29vw;
     height: 360px;
     border: 2px solid black;
-    background:url('a2.jpeg') no-repeat center center/cover;
+    background:url('/Newfolder/5.png') no-repeat center center/cover;
     display: flex;
     justify-content:center;
     align-items:flex-end;
@@ -504,7 +504,7 @@ ul li a:hover{
     width: 30vw;
     height: 360px;
     border: 2px solid black;
-    background:url('a3.jpeg') no-repeat center center/cover;
+    background:url('/Newfolder//7.jpg') no-repeat center center/cover;
     display: flex;
     justify-content:center;
     align-items:flex-end;
